fix: wrong spacing generated in schedules

--- a/style/SCSS/_schedules.scss
+++ b/style/SCSS/_schedules.scss
@@ -1,8 +1,8 @@
 .schedules {
     display: flex;
     justify-content: space-between;
-    padding-left: 123px;
-    padding-right: 123px;
+    align-items: start;
+    padding: 36px 123px 17px 123px;
     background-color: $background-color-1;
 
     h2 {
@@ -22,19 +22,21 @@
     [class^="schedules__opening-time"] {
         &::before {
             content: '';
+            display: none;
             width: 15px;
             height: 7px;
-            display: inline-block;
-            margin: auto 10px 1px auto;
+            margin: auto 10px 1px auto; 
         }
     }
     [class$="open"] {
         &::before {
+            display: inline-block;
             background-color: $accent-color-2;
         }
     }
     [class$="close"] {
         &::before {
+            display: inline-block;
             background-color: $accent-color-1;
         }
     }
