--- a/style/SCSS/global/_global.scss
+++ b/style/SCSS/global/_global.scss
@@ -44,3 +44,7 @@ body {
 p {
     margin: 0px;
 }
+
+h2 {
+    margin: 0px;
+}
