--- a/style/global/style.css
+++ b/style/global/style.css
@@ -8,12 +8,17 @@ p {
   margin: 0px;
 }
 
+/* line 48, ../../Users/Igor/projects/lemon-pepper/style/scss/global/_global.scss */
+h2 {
+  margin: 0px;
+}
+
 /* line 1, ../../Users/Igor/projects/lemon-pepper/style/scss/_schedules.scss */
 .schedules {
   display: flex;
   justify-content: space-between;
-  padding-left: 123px;
-  padding-right: 123px;
+  align-items: start;
+  padding: 36px 123px 17px 123px;
   background-color: #ebebeb;
 }
 
@@ -45,19 +50,21 @@ p {
 /* line 23, ../../Users/Igor/projects/lemon-pepper/style/scss/_schedules.scss */
 .schedules [class^="schedules__opening-time"]::before {
   content: '';
+  display: none;
   width: 15px;
   height: 7px;
-  display: inline-block;
   margin: auto 10px 1px auto;
 }
 
 /* line 32, ../../Users/Igor/projects/lemon-pepper/style/scss/_schedules.scss */
 .schedules [class$="open"]::before {
+  display: inline-block;
   background-color: #44A755;
 }
 
-/* line 37, ../../Users/Igor/projects/lemon-pepper/style/scss/_schedules.scss */
+/* line 38, ../../Users/Igor/projects/lemon-pepper/style/scss/_schedules.scss */
 .schedules [class$="close"]::before {
+  display: inline-block;
   background-color: #B11B1B;
 }
 
